--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@ small{color:#555}
 <p class="muted">Enter your percent score (0–100) for each item. Empty fields will be ignored.</p>
 <div class="grid">
 <div class="card">
-<h2>Lecture — Workbook Assignments (8)</h2>
+<h2>Lecture: Workbook Assignments</h2>
 <div id="assignments"></div>
 <small>Assignments contribute <strong>15%</strong> to the lecture grade.</small>
 </div>
 <div class="card">
-<h2>Lecture — Quizzes (7)</h2>
+<h2>Lecture: Quizzes</h2>
 <div id="quizzes"></div>
 <small>Quizzes contribute <strong>20%</strong> to the lecture grade.</small>
 </div>
 <div class="card">
-<h2>Lecture — Section Exams (2) & Final (1)</h2>
+<h2>Lecture: Section Exams & Final</h2>
 <div id="sectionExams"></div>
 <div style="margin-top:8px">
-<label for="final">Final exam (percent)</label>
+<label for="final">Final exam</label>
 <input type="number" id="final" min="0" max="100" step="0.1" placeholder="0">
 </div>
 <small>Section exams = <strong>30%</strong>, Final = <strong>35%</strong> of lecture grade.</small>
 </div>
 <div class="card">
-<h2>Lab — Practicals (7)</h2>
+<h2>Lab: Practicals</h2>
 <div id="practicals"></div>
-<small>Practical 1 & 2 = <strong>15%</strong> of lab; Practical 3 & 4 = <strong>30%</strong>; Practical 5–7 = <strong>55%</strong>.</small>
+<small>Practical 1 = <strong>15%</strong> of lab; Practical 2 = <strong>30%</strong>; Practical 3 = <strong>55%</strong>.</small>
 </div>
 <div class="card full">
 <h2>Results</h2>
@@ -68,6 +68,7 @@ small{color:#555}
 <div style="margin-top:12px;display:flex;gap:8px">
 <button id="calcBtn">Calculate</button>
 <button id="resetBtn" class="secondary">Reset</button>
+  <small>Commbined Grade: Workbook = <strong>7.5%</strong>, Quizzes = <strong>10%</strong>, Section Exams = <strong>15%</strong>, Final Exam = <strong>17.5%</strong>, Practical 1 = <strong>7.5%</strong> , Practical 2 = <strong>15%</strong>, Practical 3 = <strong>27.5%</strong>.</small>
 </div>
 </div>
 </div>
