--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ small{color:#555}
 <label for="final">Final exam</label>
 <input type="number" id="final" min="0" max="100" step="0.1" placeholder="0">
 </div>
-<small>Section exams = <strong>30%</strong>, Final = <strong>35%</strong> of lecture grade.</small>
+<small>Section exams = <strong>30%</strong>, Final = <strong>35%</strong> of the lecture grade.</small>
 </div>
 <div class="card">
 <h2>Lab: Practicals</h2>
 <div id="practicals"></div>
-<small>Practical 1 = <strong>15%</strong> of lab; Practical 2 = <strong>30%</strong>; Practical 3 = <strong>55%</strong>.</small>
+<small>Practical 1 = <strong>15%</strong>, Practical 2 = <strong>30%</strong>, Practical 3 = <strong>55%</strong> of the lab grade.</small>
 </div>
 <div class="card full">
 <h2>Results</h2>
@@ -68,7 +68,7 @@ small{color:#555}
 <div style="margin-top:12px;display:flex;gap:8px">
 <button id="calcBtn">Calculate</button>
 <button id="resetBtn" class="secondary">Reset</button>
-  <small>Commbined Grade: Workbook = <strong>7.5%</strong>, Quizzes = <strong>10%</strong>, Section Exams = <strong>15%</strong>, Final Exam = <strong>17.5%</strong>, Practical 1 = <strong>7.5%</strong> , Practical 2 = <strong>15%</strong>, Practical 3 = <strong>27.5%</strong>.</small>
+  <small>Combined Grade: Workbook = <strong>7.5%</strong>, Quizzes = <strong>10%</strong>, Section Exams = <strong>15%</strong>, Final Exam = <strong>17.5%</strong>, Practical 1 = <strong>7.5%</strong> , Practical 2 = <strong>15%</strong>, Practical 3 = <strong>27.5%</strong>.</small>
 </div>
 </div>
 </div>
